--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,5 @@ bm25/test_qrels_laptop.txt
 bm25/test_qrels_restaurant.txt
 bm25/test_queries_restaurant.txt
 bm25/test_queries_laptop.txt
+bm25/collection/laptop_test/laptop_test.jsonl
+bm25/collection/restaurant_test/restaurant_test.jsonl
