bm25/02_run_bm25.ipynb: cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@ bm25/test_queries_restaurant.txt
 bm25/test_queries_laptop.txt
 bm25/collection/laptop_test/laptop_test.jsonl
 bm25/collection/restaurant_test/restaurant_test.jsonl
+bm25/test_results_laptop.txt
+bm25/test_results_restaurant.txt
