merge/merge.ipynb: cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,5 @@ bm25/test_results_restaurant_original_new.txt
 bm25/test_queries_restaurant_original.txt
 siamese/query_results/
 merge/query_results/
+bm25/test_results_laptop_bm25.txt
+bm25/test_results_restaurant_bm25.txt
