--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ siamese/query_results/
 merge/query_results/
 bm25/test_results_laptop_bm25.txt
 bm25/test_results_restaurant_bm25.txt
+data/our_datasets/
